--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 width="150"
                 height="150"
               />
-              <span class="skill__info">Calculator of your house energy on flask</span>
+              <span class="skill__info">Calculator of your house energy on flask and prototype of backend form</span>
               <input class="skill__button" type="submit" name="button_python" value="SHOW PROJECT">
             </li>
             <li class="skills-list__skill skill">
@@ -75,7 +75,7 @@
                 width="150"
                 height="150"
               />
-              <span class="skill__info">Telegram  bot if you have no friends to chat with</span>
+              <span class="skill__info">Telegram  bot with multitude commands and ability send api photos</span>
               <input class="skill__button" type="submit" name="button_tg" value="SHOW PROJECT">
             </li>
             <li class="skills-list__skill skill">
@@ -86,7 +86,7 @@
                 width="150"
                 height="150"
               />
-              <span class="skill__info">My first work with html</span>
+              <span class="skill__info">My first work with html and api weather report in local city</span>
               <input class="skill__button" type="submit" name="button_html" value="SHOW PROJECT">
             </li>
             <li class="skills-list__skill skill">
@@ -97,7 +97,7 @@
                 width="150"
                 height="150"
               />
-              <span class="skill__info">Your online diary with flask database</span>
+              <span class="skill__info">Your online diary with flask database of users and "cards" of your diary</span>
               <input class="skill__button" type="submit" name="button_db" value="SHOW PROJECT">
             </li>
           </ul>
